@@ -11,6 +11,7 @@ Enhancements::
 
 * add `save_theme` helper to work with a copy of the theme within a scope (#2196)
 * add support for `scale` attribute or `iw` unit on `pdfwidth` attribute on image macros (#1933)
+* add backlink from bibref on bibliography entry to first reference to that entry in the document (#1737)
 
 == 2.0.7 (2022-06-03) - @mojavelinux
 
